Сверстал шаблон страницы 404

--- a/news_website/templates/pages_error/404.html
+++ b/news_website/templates/pages_error/404.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+{% load static %}
+<html lang="ru">
 
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="{% static 'css/404.css' %}">
+  <script src="{% static 'js/404.js' %}"></script>
+  <title>Страница не найдена</title>
+</head>
+
+<body>
+<div class="text">
+  <div>Ууупс... Ошибка</div>
+  <h1>404</h1>
+  <hr>
+  <div>Страница не найдена</div>
+</div>
+
+<div class="astronaut">
+  <img src="{% static 'img/astronaut.png' %}" alt="" class="src">
+</div>
 </body>
 </html>
