--- a/news_website/templates/base.html
+++ b/news_website/templates/base.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="ru">
-  <head>    
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png"
-          href="{% static '/img/fav/favicon.ico' %}">
-    <link rel="icon" href="{% static '/img/fav/fav.ico' %}" type="image">
-    <link rel="apple-touch-icon" sizes="180x180"
-          href="{% static '/img/fav/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32"
-          href="{% static '/img/fav/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16"
-          href="{% static '/img/fav/favicon-16x16.png' %}">
-    <meta name="msapplication-TileColor" content="#000">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>{% block title %}
-        News - лучшие новости
-      {% endblock %}</title>
-  </head>
-  <body>
-    <header>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/png"
+        href="{% static '/img/fav/favicon.ico' %}">
+  <link rel="icon" href="{% static '/img/fav/fav.ico' %}" type="image">
+  <link rel="apple-touch-icon" sizes="180x180"
+        href="{% static '/img/fav/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32"
+        href="{% static '/img/fav/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16"
+        href="{% static '/img/fav/favicon-16x16.png' %}">
+  <meta name="msapplication-TileColor" content="#292929">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+  <title>{% block title %}
+    News - лучшие новости
+    {% endblock %}</title>
+</head>
+<body>
 
-    </header>
-    <main>
-      {% block content %}
-        Нет контента :(
-      {% endblock %}
-    </main>
-    <footer class="border-top text-center py-3">
+<header>
 
-    </footer>
-  </body>
+</header>
+{% include 'includes/navigations.html' %}
+  <main>
+    {% block content %}
+
+    {% endblock %}
+  </main>
+  <footer class="border-top text-center py-3">
+
+  </footer>
+</div>
+</body>
 </html>
