--- a/news_website/templates/news/main.html
+++ b/news_website/templates/news/main.html
@@ -1,2 +1,33 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}News - лучшие новости{% endblock %}
+{% block content %}
+<div class="container py-5">
+  <article>
+    {% for news in page_obj %}
+
+
+    <div class="card mb-3 w-100 p-3 ">
+      <div class="row g-0">
+        <div class="col-md-4">
+          {% thumbnail news.image "1920x1200" crop="center" upscale=True as im%}
+          <img class="img-fluid rounded-start" src="{{ im.url }}" alt="...">
+          {% endthumbnail %}
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">{{ news.title }}</h5>
+            <p class="card-text">{{ news.body|slice:":255" }}...</p>
+            <p class="card-text"><small class="text-muted">Автор:
+              {{news.author.get_full_name }}</small></p>
+            <p class="card-text"><small class="text-muted">Дата публикации:
+              {{news.publish_date|date:"d E Y" }}</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </article>
+  {% include 'includes/paginator.html' %}
+</div>
+{% endblock %}
