Добавил страницу с развёрнутым постом

--- a/news_website/templates/news/main.html
+++ b/news_website/templates/news/main.html
@@ -5,8 +5,7 @@
 <div class="container py-5">
   <article>
     {% for news in page_obj %}
-
-
+    <!-- Карточка новости -->
     <div class="card mb-3 w-100 p-3 ">
       <div class="row g-0">
         <div class="col-md-4">
@@ -16,8 +15,12 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">{{ news.title }}</h5>
-            <p class="card-text">{{ news.body|slice:":255" }}...</p>
+            <h5 class="card-title"><a class="text-decoration-none text-reset"
+       href="{% url 'news:news_detail' news.id %}">{{ news.title }}</a></h5>
+            <p class="card-text">{{ news.body|slice:":255" }}
+            <a class="text-decoration-none"
+       href="{% url 'news:news_detail' news.id %}">...далее</a>
+            </p>
             <p class="card-text"><small class="text-muted">Автор:
               {{news.author.get_full_name }}</small></p>
             <p class="card-text"><small class="text-muted">Дата публикации:
@@ -26,6 +29,7 @@
         </div>
       </div>
     </div>
+    <!-- конец карточки -->
     {% endfor %}
   </article>
   {% include 'includes/paginator.html' %}
