--- a/news_website/templates/base.html
+++ b/news_website/templates/base.html
@@ -16,15 +16,10 @@
   <meta name="msapplication-TileColor" content="#292929">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  <title>{% block title %}
-    News - лучшие новости
-    {% endblock %}</title>
+  <title>{% block title %} News - лучшие новости {% endblock %}</title>
 </head>
+<header>{% block header %}{% endblock %}</header>
 <body>
-
-<header>
-
-</header>
 {% include 'includes/navigations.html' %}
   <main>
     {% block content %}
