--- a/news_website/templates/news/main.html
+++ b/news_website/templates/news/main.html
@@ -6,7 +6,7 @@
   <article>
     {% for news in page_obj %}
     <!-- Карточка новости -->
-    <div class="card mb-3 w-100 p-3 ">
+    <div class="card mb-3 w-100 p-3 border-dark">
       <div class="row g-0">
         <div class="col-md-4">
           {% thumbnail news.image "1920x1200" crop="center" upscale=True as im%}
